<resources>
    <string name="app_name">006-MultipleActivity</string>

    <string name="button_register_text"> Register</string>
    <string name="button_login_text"> Login </string>
    <string name="button_close_text"> Close</string>

    <string name="edittext_username_hint"> Input username</string>
    <string name="edittext_password_hint"> Input password</string>

    <!--Payment Activity-->
    <string name="edittext_product_name_hint"> Product Name</string>
    <string name="edittext_product_price_hint"> Product Price</string>
    <string name="edittext_product_amount_hint"> Product Amount</string>

    <string name="button_calculate_text"> Calculate</string>
    <string name="button_clear_text"> Clear</string>
    <string name="button_exit_text"> Exit </string>
    <string name="alert_dialog_close_title"> Warning </string>
    <string name="alert_dialog_close_positive_button_text"> Yes </string>
    <string name="alert_dialog_close_negative_button_text"> No </string>
    <string name="alert_dialog_close_message_text"> Are you sure ? </string>
    <string name="alert_dialog_exit_message_text"> Are you to exit ? </string>

    <!-- Register Activity -->

    <string name="edittext_first_name_hint"> First Name </string>
    <string name="edittext_second_name_hint"> Second Name </string>
    <string name="edittext_last_name_hint"> Last  Name </string>
    <string name="edittext_email_hint"> Email </string>
    <string name="edittext_birthdate_hint"> Birthdate </string>
    <string name="switch_middle_name_text"> Middle Name </string>




</resources>