<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="org.cso.android.app.multipleactivity.viewmodel.RegisterInfo"/>
        <import type="org.cso.android.app.multipleactivity.viewmodel.RegisterActivityListenersViewModel"/>
        <import type="org.cso.android.app.multipleactivity.library.databinding.converter.RegisterBirthDateStringConverter"/>

        <variable name="registerInfo" type="RegisterInfo" />
        <variable name="viewModel" type="RegisterActivityListenersViewModel" />
        <variable name="confirmPasword" type="String" />
        <variable name="resultText" type="String" />
        <variable name="middleNameExist" type="boolean" />


    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/edittext_first_name_hint"
            android:text="@={registerInfo.firstName}" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="text"
                android:hint="@string/edittext_second_name_hint"
                android:enabled="@{middleNameExist}"
                android:text="@={registerInfo.secondName}" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@={middleNameExist}"
                android:text="@string/switch_middle_name_text"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/edittext_last_name_hint"
            android:text="@={registerInfo.lastName}" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/edittext_email_hint"
            android:text="@={registerInfo.email}" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/edittext_password_hint"
            android:text="@={registerInfo.password}" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="confirmPassword"
            android:text="@={confirmPasword}" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/edittext_birthdate_hint"
            android:text="@={RegisterBirthDateStringConverter.toStr(registerInfo.birthDate)}" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{resultText}" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_register_text"
            android:onClick="@{() -> viewModel.handleRegisterButton()}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_clear_text"
            android:onClick="@{() -> viewModel.handleClearButton()}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_close_text"
            android:onClick="@{() -> viewModel.handleCloseButton()}"/>

    </LinearLayout>

</layout>

